@@ -10,6 +10,8 @@ Post-v3.6.0
    - Userspace datapath:
      * Conntrack now supports the FTP commands EPSV and EPRT with IPv4
        connections, instead of limiting these commands to IPv6 only.
+     * MTU can now be set on tunnel interfaces with the mtu_request
+       parameters.
    - DPDK:
      * OVS validated with DPDK 24.11.3.
    - OVSDB-IDL:
